--- a/src/app/sites/recruitment/recruitment.component.html
+++ b/src/app/sites/recruitment/recruitment.component.html
@@ -217,14 +217,23 @@
           <h3 class="h-article animated wow fadeInUp">Aktualności</h3>
 
           <!-- Article -->
-          <div class="row">
+          <div class="row" *ngFor="let news-item of news">
 
             <div class="col-lg-12">
 
-              <p>19/08/2018</p>
-              <h3 class="font-weight-bold mb-3"><strong>Title of the news</strong></h3>
-              <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
-                placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus et aut officiis debitis.</p>
+              <p>
+                <!-- 19/08/2018 -->
+                {{ news-item.date }}
+              </p>
+              <h3 class="font-weight-bold mb-3"><strong>
+                <!-- Title of the news -->
+                {{ news-item.title }}
+              </strong></h3>
+              <p>
+                <!-- Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
+                placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus et aut officiis debitis. -->
+                {{ news-item.content }}
+              </p>
             
             </div>
 
