--- a/src/app/shared/components/footer-banner/footer-banner.component.html
+++ b/src/app/shared/components/footer-banner/footer-banner.component.html
@@ -8,10 +8,10 @@
 
                 <h2>Zainteresowany studiami?</h2>
 
-                <button type="button" class="btn btn-white btn-rounded waves-effect waves-light" [routerLink]="[ '/rekrutacja' ]" mdbWavesEffect>Sprawdź aktualną rekrutację</button>
+                <button type="button" class="btn btn-white btn-rounded waves-effect waves-light" [routerLink]="[ '/aktualnosci' ]" mdbWavesEffect>Sprawdź aktualności</button>
 
                 <div class="contact-link">
-                    <a [routerLink]="['/kontakt']">lub skontaktuj się z nami</a>
+                    <a [routerLink]="['/rekrutacja']">lub dowiedz się więcej o rekrutacji</a>
                 </div>
 
               </div>
