--- a/src/app/sites/home/home.component.html
+++ b/src/app/sites/home/home.component.html
@@ -533,7 +533,7 @@
           <div class="col-12 info">
             <!-- Najbliższa planowana edycja studiów podyplomowych "Technologie Internetowe" - październik 2019! -->
             {{ homeBarNews }}
-            <a class="action" [routerLink]="['/rekrutacja']">
+            <a class="action" [routerLink]="['/aktualnosci']">
               <mdb-icon far icon="fa-newspaper"></mdb-icon> Sprawdź aktualności
             </a>
           </div>
