Working news editor

--- a/src/app/sites/news/news.component.html
+++ b/src/app/sites/news/news.component.html
@@ -35,11 +35,10 @@
                 <!-- Title of the news -->
                 {{ newsItem.title }}
               </strong></h3>
-              <p>
-                <!-- Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
-                placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus et aut officiis debitis. -->
-                {{ newsItem.content }}
-              </p>
+              
+              <div class="html-container" [innerHTML]="newsItem.content">
+              </div>
+              <!-- {{ newsItem.content }} -->
             
             </div>
 
