--- a/src/app/sites/panel/panel.component.html
+++ b/src/app/sites/panel/panel.component.html
@@ -1,12 +1,14 @@
 <div class="view view-admin-header">
   <div class="full-bg-img">
-    <div class="mask flex-center"><!--  rgba-blue-strong-->
+    <div class="mask flex-center">
+      <!--  rgba-blue-strong-->
       <div class="container">
         <!--<div class="white-text wow fadeInRight" >-->
 
-          <h2 class="header-page">
-            Panel <span *ngIf="activeUser">{{ activeUser?.role == 'admin' ? 'administratora' : 'moderatora' }} {{ activeUser?.login ? '(' + activeUser.login + ')' : '' }}</span>
-          </h2>
+        <h2 class="header-page">
+          Panel <span *ngIf="activeUser">{{ activeUser?.role == 'admin' ? 'administratora' : 'moderatora' }}
+            {{ activeUser?.login ? '(' + activeUser.login + ')' : '' }}</span>
+        </h2>
 
         <!--</div>-->
       </div>
@@ -16,52 +18,57 @@
 
 <div class="panel-container">
 
-<div class="mt-3 mb-5">
+  <div class="mt-3 mb-5">
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 col-sm-12 col-xl-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 col-sm-12 col-xl-3">
 
-        <nav class="navbar navbar-expand-lg navbar-dark scrolling-navbar blue-gradient" id="toolbar">
-          <!--<a class="navbar-brand" href="#"><strong>Pliki</strong></a>-->
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          <nav class="navbar navbar-expand-lg navbar-dark scrolling-navbar blue-gradient" id="toolbar">
+            <!-- <a class="navbar-brand" href="#">
+              <strong>
+                Menu
+              </strong>
+            </a> -->
+            <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                   aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <span class="navbar-toggler-icon"></span> 
+            </button>-->
+            <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
             <ul class="navbar-nav mr-auto">
               <li class="nav-item mr-auto">
                 <span class="nav-link">Menu</span>
               </li>
             </ul>
 
-          </div>
-        </nav>
+          <!-- </div> -->
+          </nav>
 
-        <nav class="list-group">
-          <a class="list-group-item waves-light" routerLinkActive="active" routerLink="/panel/files" mdbWavesEffect>
-            <i class="fa fa-folder" aria-hidden="true"></i> Pliki
-          </a>
-          <a class="list-group-item waves-light" routerLinkActive="active" routerLink="/panel/news" *ngIf="activeUser.role === 'admin'" mdbWavesEffect>
-            <i class="fas fa-newspaper"></i> Aktualności
-          </a>
-          <a class="list-group-item waves-light" routerLinkActive="active" routerLink="/panel/accounts" *ngIf="activeUser.role === 'admin'" mdbWavesEffect>
-            <i class="fa fa-users" aria-hidden="true"></i> Użytkownicy
-          </a>
-          <a class="list-group-item waves-light" routerLinkActive="active" routerLink="/panel/account" mdbWavesEffect>
-            <i class="fa fa-user" aria-hidden="true"></i> Konto
-          </a>
+          <nav class="list-group">
+            <a class="list-group-item waves-light" routerLinkActive="active" routerLink="/panel/files" mdbWavesEffect>
+              <i class="fa fa-folder" aria-hidden="true"></i> Pliki
+            </a>
+            <a class="list-group-item waves-light" routerLinkActive="active" routerLink="/panel/news"
+              *ngIf="activeUser.role === 'admin'" mdbWavesEffect>
+              <i class="fas fa-newspaper"></i> Aktualności
+            </a>
+            <a class="list-group-item waves-light" routerLinkActive="active" routerLink="/panel/accounts"
+              *ngIf="activeUser.role === 'admin'" mdbWavesEffect>
+              <i class="fa fa-users" aria-hidden="true"></i> Użytkownicy
+            </a>
+            <a class="list-group-item waves-light" routerLinkActive="active" routerLink="/panel/account" mdbWavesEffect>
+              <i class="fa fa-user" aria-hidden="true"></i> Konto
+            </a>
 
-        </nav>
+          </nav>
 
-      </div>
-      <div class="col-md-8 col-sm-12 col-xl-9 content-container">
-        <router-outlet></router-outlet>
+        </div>
+        <div class="col-md-8 col-sm-12 col-xl-9 content-container">
+          <router-outlet></router-outlet>
+        </div>
       </div>
     </div>
+
   </div>
 
 </div>
-
-</div>
-
