--- a/src/app/shared/components/loader/loading-bar/loading-bar.component.html
+++ b/src/app/shared/components/loader/loading-bar/loading-bar.component.html
@@ -1,4 +1,3 @@
 <div class="loader-overlay">
-  <progressbar *ngIf="show" max="100" [value]="100" [striped]="true" [animate]="true"></progressbar>
-    <!--  -->
+  <progressbar *ngIf="show" type="dark" max="100" [value]="100" [striped]="true" [animate]="true"></progressbar>
 </div>
