--- a/src/app/sites/recruitment/recruitment.component.html
+++ b/src/app/sites/recruitment/recruitment.component.html
@@ -89,7 +89,8 @@
                   <p>W kroku pierwszym procesu rekrutacji należy wydrukować podanie o przyjęcie na studia podyplomowe
                     oraz zgromadzić pozostałe wymagane dokumenty wymienione w punkcie: </p>
                   <div class="step-link">
-                    <a [ngx-scroll-to]="'#step1'" [ngx-scroll-to-offset]="-80"><i class="fa fa-file-text-o" aria-hidden="true"></i> Wymagane dokumenty</a>
+                    <a [ngx-scroll-to]="'#step1'" [ngx-scroll-to-offset]="-80">
+                        <i class="fas fa-file-alt"></i> Wymagane dokumenty</a>
                   </div>
                 </div>
 
@@ -108,7 +109,9 @@
                   <p>W kroku drugim podpisane podanie wraz z pozostałymi dokumentami należy złożyć w Dziekanacie
                     Wydziału Elektrotechniki i Informatyki, patrz punkt: </p>
                   <div class="step-link">
-                      <a [ngx-scroll-to]="'#step2'" [ngx-scroll-to-offset]="-80"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Złożenie dokumentów</a>
+                      <a [ngx-scroll-to]="'#step2'" [ngx-scroll-to-offset]="-80">
+                        <i class="fas fa-university"></i> Złożenie dokumentów
+                      </a>
                   </div>
                 </div>
               </li>
@@ -126,7 +129,9 @@
                   <p>W kroku trzecim, po pozytywnym przejściu procesu rekrutacji, kandydat otrzymuje informację o
                     decyzji przyjęcia na studia podyplomowe oraz dane dostępowe do opcji Logowanie, patrz punkt:</p>
                   <div class="step-link">
-                    <a [ngx-scroll-to]="'#step3'" [ngx-scroll-to-offset]="-80"><i class="fa fa-user-circle-o" aria-hidden="true"></i>Logowanie na stronie studiów podyplomowych</a>
+                    <a [ngx-scroll-to]="'#step3'" [ngx-scroll-to-offset]="-80">
+                        <i class="fas fa-user-circle"></i> Logowanie na stronie studiów podyplomowych
+                    </a>
                   </div>
                 </div>
               </li>
@@ -143,7 +148,7 @@
       <div class="row text-section left-col-icon zlozenie-dokumentow" id="step1">
         <div class="col-sm-12 col-md-1 icon-left">
           <h3 class="h-article">
-            <i class="fas fa-file-alt" aria-hidden="true"></i>
+            <i class="fas fa-file-alt"></i>
           </h3>
         </div>
         <div class="col-sm-12 col-md-11">
@@ -192,7 +197,7 @@
       <div class="row text-section left-col-icon" id="step3">
         <div class="col-sm-12 col-md-1 icon-left">
           <h3 class="h-article">
-            <i class="fas fa-user-circle" aria-hidden="true"></i>
+            <i class="fas fa-user-circle"></i>
           </h3>
         </div>
         <div class="col-sm-12 col-md-11">
