--- a/src/app/sites/panel/accounts/accounts.component.html
+++ b/src/app/sites/panel/accounts/accounts.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light scrolling-navbar navbar-dark blue-gradient" id="toolbar">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+  <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  </button> -->
+  <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" (click)="unselectEditUserAccess()" *ngIf="editAccessAccount">
@@ -23,7 +23,7 @@
         </a>
       </li>
     </ul>   
-  </div>
+  <!-- </div> -->
 </nav>
 
 <div class="container-files">
