--- a/src/app/sites/panel/shared/files-manager/file-explorer/file-explorer.component.html
+++ b/src/app/sites/panel/shared/files-manager/file-explorer/file-explorer.component.html
@@ -3,11 +3,11 @@
   id="toolbar" 
   [ngClass]="{'navbar-edit-user-access': mode === 'edit-user-access' }">
   <!--<a class="navbar-brand" href="#"><strong>Pliki</strong></a>-->
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+  <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  </button> -->
+  <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
     <ul class="navbar-nav mr-auto">
       <li class="nav-item back-button"> <!-- powrót do katalogu wyżej -->
         <a class="nav-link" (click)="navigateUp()" *ngIf="canNavigateUp">
@@ -32,23 +32,20 @@
         </a>
       </li>
     </ul>
-  </div>
+  <!-- </div> -->
 </nav>
 
 <div class="container-files">
   <div class="table-responsive">
     <table mdbTable ><!-- striped="true" -->
-      <thead>
-        <!-- *ngIf="!isLoadingData" -->
+      <!-- *ngIf="!isLoadingData" -->
+      <!-- <thead>
         <tr>
-          <!--<th scope="col"></th>-->
           <th scope="col" colspan="2">Nazwa</th>
           <th scope="col" class="file-modified">Data modyfikacji</th>
-          <th scope="col" class="file-menu">
-            <!--Akcje-->  
-          </th>
+          <th scope="col" class="file-menu"></th>
         </tr>
-      </thead>
+      </thead> -->
       <tbody>
 
       <tr mdbTableCol 
