--- a/src/app/sites/news/news.component.html
+++ b/src/app/sites/news/news.component.html
@@ -27,7 +27,7 @@
             <div class="col-lg-12">
 
               <p>
-                {{ newsItem.date }}
+                {{ newsItem.created_at }}
               </p>
               <h3 class="font-weight-bold mb-3"><strong>
                 {{ newsItem.title }}
@@ -40,6 +40,16 @@
             </div>
 
             <hr class="my-3">
+
+          </div>
+
+          <div class="row news-item" *ngIf="(news == null || news == undefined || news.length == 0) && !isLoadingData">
+
+            <div class="col-lg-12">
+
+              <h4>Brak aktualności</h4>
+
+            </div>  
 
           </div>
 
