--- a/src/styles.scss
+++ b/src/styles.scss
@@ -80,7 +80,7 @@ a:hover {
     background: linear-gradient(45deg, #45cafc, #303f9f) !important;
   }
   .view-page-header .header-page {    
-    padding-top: 12vh;
+    // padding-top: 12vh;
     padding-left: 1em;
     font-size: 1.3em;
   }
