--- a/src/app/sites/news/news.component.html
+++ b/src/app/sites/news/news.component.html
@@ -26,20 +26,27 @@
 
             <div class="col-lg-12">
 
-              <p>
-                {{ newsItem.created_at }}
-              </p>
-              <h3 class="font-weight-bold mb-3"><strong>
-                {{ newsItem.title }}
-              </strong></h3>
+              <div class="row pb-3">
+                <div class="col-8">
+                  <h3 class="font-weight-bold mb-3"><strong>
+                    {{ newsItem.title }}
+                  </strong></h3>
+                </div>
+                <div class="col-4 date">
+                  <p>
+                    {{ newsItem.created_at | date: 'dd/MM/yyyy' }}
+                  </p>
+                </div>
+              </div>
 
               <div class="html-container" [innerHTML]="newsItem.content">
               </div>
               <!-- {{ newsItem.content }} -->
             
             </div>
-
-            <hr class="my-3">
+            <div class="col-lg-12">
+              <hr class="my-3">
+            </div>
 
           </div>
 
